<resources>
    <string name="app_name">Wifi多跳演示</string>
    <string name="global_application_name">WiFi Tether</string>
	<string name="global_application_installed">Binaries and config-files installed!</string>
	<string name="global_application_error_restartsecwifi">Unable to restart secured wifi!</string>
	<string name="global_application_tethering_running"><![CDATA[UTethering is currently running ...]]></string>
	<string name="global_application_accesscontrol_disabled">AC disabled</string>
	<string name="global_application_accesscontrol_authorized">Authorized</string>
	<string name="global_application_accesscontrol_unauthorized">Unauthorized</string>
	<string name="global_application_connected">connected</string>
	<string name="main_activity_settings">Settings</string>
	<string name="main_activity_about">About</string>
	<string name="main_activity_donation_headline">Voluntary donate</string>
	<string name="main_activity_donate">Donate</string>
	<string name="main_activity_close">Close</string>
	<string name="main_activity_notroot">Not Root!</string>
	<string name="main_activity_nonetfilter">No Netfilter!</string>
	<string name="main_activity_noaccesscontrol">No Access Control!</string>
	<string name="main_activity_accesscontrol_disabled">Access-Control disabled.</string>
	<string name="main_activity_exit">Exit</string>
	<string name="main_activity_ignore">Ignore</string>
	<string name="main_activity_yes">Yes</string>
	<string name="main_activity_no">No</string>
	<string name="main_activity_ok">OK</string>
	<string name="main_activity_locked">Tether is locked!</string>
	<string name="main_activity_showlog">Show Log</string>
	<string name="main_activity_accesscontrol">Access Control</string>
	<string name="main_activity_start">Start Tethering</string>
	<string name="main_activity_start_summary"><![CDATA[Please wait while starting...]]></string>
	<string name="main_activity_start_errors">Tethering started with errors! Please check \'Show log\'.</string>
	<string name="main_activity_start_unable">Unable to start tethering. Is your device \'rooted\'?</string>
	<string name="main_activity_start_wiredtethering_running">Wired-tethering seems to be running at the moment. Please disable first!</string>
	<string name="main_activity_start_usbtethering_running"><![CDATA[USB-tethering seems to be running at the moment. Please disable it first: Settings -> Wireless & network setting -> Internet tethering.]]></string>
	<string name="main_activity_start_unknownstate">Your phone is currently in an unknown state - try to reboot!</string>
	<string name="main_activity_stop">Stop Tethering</string>
	<string name="main_activity_stop_summary"><![CDATA[Please wait while stopping...]]></string>
	<string name="main_activity_confirm">Confirm</string>
	<string name="main_activity_cancel">Cancel</string>
	<string name="main_activity_trackball_pressed_start">Trackball pressed. Confirm tether start.</string>
	<string name="main_activity_trackball_pressed_stop">Trackball pressed. Confirm tether stop.</string>
	<string name="main_activity_keepalive_headline">Keepalive</string>
	<string name="main_activity_idle_headline">Idle</string>
	<string name="main_activity_timer_headline">Timer</string>
	<string name="log_activity_nologfile">Unable to open log-File. File does not exist!</string>
	<string name="main_layout_presstostart">- Press to start tethering. -</string>
	<string name="main_layout_presstostop">- Press to stop tethering. -</string>
	<string name="main_layout_download">Download</string>
	<string name="main_layout_quota">Quota</string>
	<string name="main_layout_upload">Upload</string>
	<string name="main_layout_lock">Lock</string>
	<string name="accesscontrol_activity_reloadclientlist">Reload Client-List</string>
	<string name="accesscontrol_activity_applysettings">Apply Settings</string>
	<string name="accesscontrol_activity_enabled">Access-Control enabled.</string>
	<string name="accesscontrol_activity_disabled">Access-Control disabled.</string>
	<string name="accesscontrol_activity_is_enabled">Access-Control is enabled.</string>
	<string name="accesscontrol_activity_is_disabled">Access-Control is disabled.</string>
	<string name="accesscontrol_activity_error_save_whitelistfile">Unable to save whitelist-file!</string>
	<string name="accesscontrol_activity_error_remove_whitelistfile">Unable to remove whitelist-file!</string>
	<string name="accesscontrol_activity_error_read_leasefile">Unable to read leases-file!</string>
	<string name="accesscontrol_activity_config_saved">Access-Control Configuration saved!</string>
	<string name="accesscontrol_activity_not_connected">- Not connected -</string>
	<string name="accesscontrol_layout_connectedclients">Connected/Authorized Clients:</string>
	<string name="accesscontrol_layout_apply">Apply</string>
	<string name="accesscontrol_layout_enable">Enable</string>
	<string name="accesscontrol_layout_disable">Disable</string>
	<string name="setup_activity_reinstall">(Re)-Install binaries/configs</string>
	<string name="setup_activity_restart_tethering_title">Restart Tethering</string>
	<string name="setup_activity_restart_tethering_message"><![CDATA[Please wait while restarting...]]></string>
	<string name="setup_activity_error_passphrase_invalidchars">Passphrase contains invalid characters, not saved!</string>
	<string name="setup_activity_error_passphrase_tooshort">Passphrase too short! New value was not saved.</string>
	<string name="setup_activity_error_passphrase_toolong">Passphrase too long! New value was not saved.</string>
	<string name="setup_activity_error_restart_tethering">Unable to restart tethering!</string>
	<string name="setup_activity_error_passphrase_info">Passphrase must be between 8 and 30 characters long!</string>
	<string name="setup_activity_error_passphrase_13chars">Passphrase must be 13 characters (ASCII) long!</string>
	<string name="setup_activity_error_ssid_invalidchars">SSID contains invalid characters</string>
	<string name="setup_activity_error_ssid_empty">New SSID cannot be empty</string>
	<string name="setup_activity_error_ssid_notsaved">, not saved.</string>
	<string name="setup_activity_error_ipaddress_invalid">Ip-address is not valid, not saved.</string>
	<string name="setup_activity_info_device_changedto">Device changed to </string>
	<string name="setup_activity_info_setup_changedto">Setup-method changed to </string>
	<string name="setup_activity_info_ssid_changedto">SSID changed to </string>
	<string name="setup_activity_info_channel_changedto">Channel changed to </string>
	<string name="setup_activity_info_passphrase_changedto">Passphrase changed to </string>
	<string name="setup_activity_info_txpower_changedto">Transmit power changed to </string>
	<string name="setup_activity_info_lan_changedto">LAN-network changed to </string>
	<string name="setup_activity_info_wakelock_disabled">Wake-lock is now disabled.</string>
	<string name="setup_activity_info_wakelock_enabled">Wake-lock is now enabled.</string>
	<string name="setup_activity_info_accesscontrol_disabled">Access Control disabled.</string>
	<string name="setup_activity_info_accesscontrol_enabled">Access Control enabled.</string>
	<string name="setup_activity_txpower_warning_title">Warning: Transmit Power</string>
	<string name="setup_activity_txpower_warning_ok">OK</string>
	<string name="setup_activity_hidessid_warning_title">Warning: Hide SSID</string>
	<string name="setup_activity_hidessid_warning_ok">OK</string>
	<string name="setup_layout_category_wifi">Wifi</string>
	<string name="setup_layout_category_security">Security</string>
	<string name="setup_layout_category_shutdown">Automatic Shutdown Options</string>
	<string name="setup_layout_shutdown_timer">Shutdown Timer</string>
	<string name="setup_layout_shutdown_timer_summary">Stop tethering-service after a specified length of time.</string>
	<string name="setup_layout_shutdown_timer_unit_minutes">minutes</string>
	<string name="setup_layout_shutdown_timer_dialog_elapsed"><![CDATA[Shutdown after ... minutes have elapsed.]]></string>
	<string name="setup_layout_shutdown_timer_limit">Set timer</string>
	<string name="setup_layout_shutdown_timer_limit_summary">Configure the length of time before shutdown.</string>
	<string name="global_application_tethering_shutdown_timer">Tethering shutdown due timer expiration.</string>
	<string name="setup_layout_shutdown_inactive">Idle Shutdown</string>
	<string name="setup_layout_shutdown_inactive_summary">Stop tethering-service after a specified time of inactivity</string>
	<string name="setup_layout_shutdown_inactive_unit_minutes">minutes</string>
	<string name="setup_layout_shutdown_inactive_dialog_idletime"><![CDATA[Shutdown after ... of inactivity.]]></string>
	<string name="setup_layout_shutdown_inactive_idle_time">Set idle limit</string>
	<string name="setup_layout_shutdown_inactive_idle_summary">Configure the idle-time.</string>
	<string name="global_application_tethering_shutdown_inactive">Tethering shutdown due to inactivity.</string>
	<string name="setup_layout_category_keepalive">Keep Alive - Connection Checker</string>
	<string name="setup_layout_keepalive_title">Keep Alive - Connection Checking</string>
	<string name="setup_layout_keepalive_summary">This option will regularly connect to a webserver and download a small amount of data at a user specified interval to verify your connection, if it fails you will be notified.</string>
	<string name="setup_layout_keepalive_websites_manual">Websites to check for keep-alive</string>
	<string name="setup_layout_keepalive_websites_default">www.google.com;www.yahoo.com;www.bing.com</string>
	<string name="setup_layout_keepalive_websites_manualsummary">Enter a list of valid HTTP servers separated by semi-colons. Leave blank to restore default values.</string>
	<string name="setup_layout_keepalive_interval_manual">Keep-Alive check interval</string>
	<string name="setup_layout_keepalive_interval_manualsummary">Configure delay in minutes between keep-alive request if last attempt was successful.</string>
	<string name="setup_layout_keepalive_intervalshutdown_manual">Keep-Alive failed retry period</string>
	<string name="setup_layout_keepalive_intervalshutdown_manualsummary">Configure delay in minutes between keep-alive\'s first failed request and tether shutdown.</string>
	<string name="setup_layout_keepalive_option">Keep-Alive Failure Options</string>
	<string name="setup_layout_keepalive_optionsummary">Configure keep-alive failure options. Retry with no limit or retry until set time limit is reached then shutdown tether connection.</string>
	<string name="setup_activity_info_keepaliveshutdowntimer">Keep-Alive shutdown timer changed. Changes will take effect for next tethering session.</string>
	<string name="setup_activity_info_fallbacktether">Changed the fallback-mode property. This will take effect for next tethering session.</string>
	<string name="setup_activity_info_maxclientscmd">Changed the Netd-maxclient-cmd property. This will take effect for next tethering session.</string>
	<string name="global_application_tethering_shutdown_keepalive">Tethering shutdown due to keepalive giving up trying to establish a connection.</string>
    <string name="start_adhoc_tips">启动路由</string>
    <string name="baseinfo_adhoc_unstarted">路由未开启</string>
    <string name="empty_listview_tips">自组织网络正在初始化，正在发现周围的节点\u2026</string>
    <string name="tv_dest_tag">目的地址</string>
    <string name="tv_mask_tag">掩码</string>
    <string name="tv_dest_content">192.168.2.251</string>
    <string name="tv_mask_content">/32</string>
    <string name="tv_next_tag">下一跳</string>
    <string name="tv_next_content">192.168.2.250</string>
    <string name="tv_hps_tag">跳数</string>
    <string name="tv_hps_content">2</string>
    <string name="tv_etx_tag">ETX</string>
    <string name="tv_etx_content">1.005</string>
    <string name="tv_interface_tag">网卡</string>
    <string name="tv_interface_content">wlan0</string>
</resources>